tests/Casm/negative/test004.casm
-- double write

start:
  [ap] = 0
  [fp] = 7
